# AI-sector-research-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.py  pyproject.toml
research_agent/: __init__.py  config.py  middleware.py  prompts.py  tools.py
tests/: test_config.py  test_middleware.py  test_tools.py
